<resources>
    <string name="app_name">TipCalculator</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="bill_amount">Bill Amount</string>

    <string name="tip_total">Tip Total</string>
    <string name="total">Total</string>

    <string name="Add">+</string>
    <string name="Subtract">-</string>

    <string name="percent">00%</string>
    <string name="amount">$0.00</string>
    <string name="tip">$0.00</string>
</resources>
